--- a/404.html
+++ b/404.html
@@ -18,8 +18,6 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <img width="90%" src="{{ site.baseurl }}/images/404.svg" alt="404">
+  <h1>Page non trouvée</h1>
 </div>
